# dev-environment

./: .gitignore  LICENSE  README.md  starship.toml
Terminal/: README.md
Terminal/starship/: starship_backup.toml
prettier/: .prettierrc.json
ruff/: pyproject.toml
sqlfluff/: .sqlfluff
